@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * use pg_roles instead of pg_authid due to https://github.com/lesovsky/pgcenter/issues/35.
   * fix wrong memory allocation for iostat/ifstat.
   * add details about prepared transactions: total, max, maxtime.
   * add xact_age,time_age to pg_stat_replication stats (available since 9.5).
